Arreglar paths